--- a/content/pages/Our-Vetting-Process.mdx
+++ b/content/pages/Our-Vetting-Process.mdx
@@ -1,6 +1,46 @@
 ---
 title: Our Vetting Process
 blocks:
+  - logo:
+      src: /inreach-logos/InReach_Logo_Color_RGB.svg
+      alt: InReach Logo
+    navBGColor: Green
+    navLinks:
+      - linkName: About
+        linkUrls:
+          - sectionUrl: Mission
+            pathURL: /
+          - sectionUrl: Our Team
+            pathURL: /example-gallery
+          - sectionUrl: Our Vetting Process
+            pathURL: /
+      - linkName: News
+        linkUrls:
+          - sectionUrl: In The News
+            pathURL: /
+          - sectionUrl: Awards
+            pathURL: /
+          - sectionUrl: Our Blog
+            pathURL: /
+      - linkName: Get Help
+        linkUrls:
+          - sectionUrl: Get Help For Myself
+            pathURL: /
+          - sectionUrl: Get Help For My Client
+            pathURL: /
+      - linkName: Take Action
+        linkUrls:
+          - sectionUrl: Donate
+            pathURL: /
+          - sectionUrl: Multiply Your Support
+            pathURL: /
+      - linkName: Contact
+        linkUrls:
+          - sectionUrl: Contact Us
+            pathURL: /
+          - sectionUrl: Donor Dashboard
+            pathURL: /
+    _template: header
   - heroBackgroundImage:
       src: /images/img10.png
       alt: banner
@@ -16,27 +56,29 @@ blocks:
 
 
       ![](/home/Service-Provider-Page-1024x725.webp)
-    richTextRight: ''
+    richTextRight: |
+      ![](</home/Screenshot 2024-12-17 at 2.16.36 PM.png>)
     _template: twoColumn
-  - richTextContent: |
-      <ColoredText text="Our Vetting Process (updated: 2024)" color="Green" />
-    _template: richText
   - richTextContent: >
+      # <ColoredText text="Our Vetting Process (updated: 2024)" color="Ally
+      Green" />
+
+
       InReach is built for the diverse and intersectional LGBTQ+ community –
       InReach’s free platform lists verified services for LGBTQ+ asylum seekers,
       refugees and other immigrants, BIPOC communities, the transgender and
       gender nonconforming (TGNC) community, youth and caregivers, and more
       LGBTQ+ communities in need of safe resources.
-    _template: richText
-  - richTextContent: >
-      At InReach, we are dedicated to ensuring our <ColoredText text=" free
-      resource platform" color="Green" /> is filled with high-quality,
+
+
+      At InReach, we are dedicated to ensuring our [free resource
+      platform](https://app.inreach.org/) is filled with high-quality,
       accessible, and welcoming direct service providers for LGBTQ+ people
       facing persecution or discrimination. Our trained volunteers conduct a
       rigorous, tailored vetting process for every provider listed on InReach.
       Our core vetting criteria include:
-    _template: richText
-  - richTextContent: >
+
+
       1. Is the direct service provider active and legitimate? (required to be
       listed on InReach)
 
@@ -46,8 +88,8 @@ blocks:
       3. Does the direct service provider meet any of InReach’s
       intersectionality definitions? (preferred but not required to be listed on
       InReach)
-    _template: richText
-  - richTextContent: >
+
+
       * At InReach, we understand that achieving LGBTQ+ equality requires trans
       justice, racial justice, refugee justice, reproductive justice, language
       justice, and more. Therefore, in addition to ensuring that each provider
@@ -56,8 +98,8 @@ blocks:
       specific historically marginalized LGBTQ+ communities.
 
       * See our intersectionality definitions below for more information.
-    _template: richText
-  - richTextContent: >
+
+
       Our team ensures these criteria are met by thoroughly researching and
       often directly communicating with each provider. Every provider listed on
       InReach has regularly updated documentation on these core criteria. We
@@ -67,6 +109,9 @@ blocks:
       At the end of our vetting process, providers are classified as either
       “verified” or “unverified.” Unverified providers are deemed ineligible for
       inclusion on InReach, at least for the time being.
+
+
+      **Examples of things we look for during our vetting process include:**
     _template: richText
   - content:
       - accordionTitle: ACTIVE & LEGITIMATE
@@ -81,13 +126,13 @@ blocks:
         accordionContent: >
           * Our trained volunteers deploy a multi-tiered vetting process to
           assess whether or not a service provider is generally ‘LGBTQ+
-          affirming’. 
+          affirming’.
 
-          * Step #1: Is the organization’s mission to serve the LGBTQ+ community
-          (e.g., an LGBTQ+ center)?
+          * **Step #1**: Is the organization’s mission to serve the LGBTQ+
+          community (e.g., an LGBTQ+ center)?
 
-          * Step #2: If ‘no’ to the above, our Resource Team looks at different
-          factors / questions based on the type of organization:
+          * **Step #2**: If ‘no’ to the above, our Resource Team looks at
+          different factors / questions based on the type of organization:
             * Religiously affiliated organization (e.g., Catholic Charities, Salvation Army, a church or congregation, etc.);
             * Organization who “serves everyone” or is “open to all people in need” (e.g., a food pantry, an overnight shelter, etc.);
             * A medical/healthcare organization (e.g., a hospital, medical clinic, health center or healthcare system, etc.);
@@ -111,44 +156,395 @@ blocks:
           As a result, in addition to satisfying our general LGBTQ+ affirming
           verification criteria, we look for (prefer but do not require to be
           listed on InReach) organizations who are ‘led by’ and/or have services
-          ‘focused on’ serving historically marginalized LGBTQ+ communities. 
+          ‘focused on’ serving historically marginalized LGBTQ+ communities.
 
 
           For example, we look for organizations who are led by those with
           relevant lived experience for LGBTQ+ people facing discrimination and
-          persecution, such as organizations who are: 
+          persecution, such as organizations who are:
 
 
-          * Black, Indigenous and People of Color (BIPOC) led 
+          * Black, Indigenous and People of Color (BIPOC) led
 
-          * Black led 
+          * Black led
 
-          * Immigrant led 
+          * Immigrant led
 
-          * Trans led 
+          * Trans led
 
-          * \*Note: We hope to add new ‘led by’ categories in the future. 
+          * \*Note: We hope to add new ‘led by’ categories in the future.
 
 
           We also look for organizations who provide services that are focused
-          on serving a specific marginalized LGBTQ+ population(s), including: 
+          on serving a specific marginalized LGBTQ+ population(s), including:
 
 
-          * Black, Indigenous and People of Color (BIPOC) community 
+          * Black, Indigenous and People of Color (BIPOC) community
 
-          * Immigrant community 
+          * Immigrant community
             * Asylum seekers
-            * Resettled refugees 
-          * LGBTQ+ youth 
-            * Trans youth 
-          * Spanish speakers 
+            * Resettled refugees
+          * LGBTQ+ youth
+            * Trans youth
+          * Spanish speakers
 
-          * Trans community 
+          * Trans community
             * Gender nonconforming community
-            * Trans men and the transmasculine community 
+            * Trans men and the transmasculine community
             * Trans women and the transfeminine community
-            * Trans youth 
+            * Trans youth
           * \*Note: As our organization’s capacity grows, we hope to add new
           LGBTQ+ communities in the future.
+      - accordionTitle: >-
+          CAN DIRECT SERVICE PROVIDERS HELP TO UPDATE THEIR OWN ORGANIZATION'S
+          INFORMATION?
+        accordionContent: >
+          Great question! Our vision is to build a dynamic platform that
+          incorporates regular community feedback, including from direct service
+          providers listed on InReach.
+
+
+          The ability for organizations to [“claim” their own profile on
+          InReach](https://inreach.org/claimed-organizations/) is coming soon.
+          Please check back here and follow us on social media (@weareinreach)
+          for updates!
     _template: accordionblock
+  - richTextContent: >
+      ***
+
+
+      # <ColoredText text="INREACH’S INTERSECTIONALITY DEFINITIONS" color="Ally
+      Green" />
+
+
+      Please see below for our intersectionality definitions (introduced in
+      January 2023) outlining how InReach defines which organizations are ‘trans
+      led’, ‘BIPOC led’, ‘immigrant led’, etc. and what it means for an
+      organization to offer a service ‘focused on’ a specific LGBTQ+ community.
+
+
+      Definitions List #1: Determining whether an organization meets any of
+      InReach’s ‘led by” definitions
+
+
+      For consistency, InReach uses an adapted version of the [Trans Justice
+      Project definition](https://www.transjusticefundingproject.org/) of what
+      it means to be ‘trans led’ for all of our community ‘led by’ definitions,
+      as described below.
+    _template: richText
+  - content:
+      - accordionTitle: >-
+          HOW ARE WE DEFINING ‘BLACK, INDIGENOUS AND PEOPLE OF COLOR (BIPOC)
+          LED’?
+        accordionContent: >
+          * The organization publicly markets itself as ‘BIPOC led’; OR
+
+          * The organization adheres to the adapted Trans Justice Funding
+          Project definition for what it means to be ‘trans led’, which holds
+          that the majority of the people in charge of the group identify as
+          trans or gender non-conforming. As applied to ‘BIPOC led’, “in charge”
+          includes any of the following examples:
+            * The director, if there is one, should identify as BIPOC.
+            * The majority of the governing board collective, advisory committee, or similar governing body, if there is such a body, should identify as BIPOC.
+            * The majority of any staff members should identify as BIPOC.
+            * If the organization or project is volunteer-run, the majority of volunteers should identify as BIPOC.
+      - accordionTitle: HOW ARE WE DEFINING ‘BLACK LED’?
+        accordionContent: >
+          * The organization publicly markets itself as ‘Black led’; OR
+
+          * The organization adheres to the adapted Trans Justice Funding
+          Project definition for what it means to be ‘trans led’, which holds
+          that the majority of the people in charge of the group identify as
+          trans or gender non-conforming. As applied to ‘Black led’, “in charge”
+          includes any of the following examples:
+            * The director, if there is one, should identify as Black.
+            * The majority of the governing board collective, advisory committee, or similar governing body, if there is such a body, should identify as Black.
+            * The majority of any staff members should identify as Black.
+            * If the organization or project is volunteer-run, the majority of volunteers should identify as Black.
+      - accordionTitle: HOW ARE WE DEFINING ‘IMMIGRANT LED’?
+        accordionContent: >
+          * The organization publicly markets itself as ‘Immigrant led’; OR
+
+          * The organization adheres to the adapted Trans Justice Funding
+          Project definition for what it means to be ‘trans led’, which holds
+          that the majority of the people in charge of the group identify as
+          trans or gender non-conforming. As applied to ‘immigrant led’, “in
+          charge” includes any of the following examples:
+            * The director, if there is one, should identify as an immigrant.
+            * The majority of the governing board collective, advisory committee, or similar governing body, if there is such a body, should identify as immigrants.
+            * The majority of any staff members should identify as immigrants.
+            * If the organization or project is volunteer-run, the majority of volunteers should identify as immigrants.
+      - accordionTitle: HOW ARE WE DEFINING ‘LGBTQ+ LED’?
+        accordionContent: >
+          * The organization publicly markets itself as ‘LGBTQ+ led’; OR
+
+          * The organization adheres to the adapted Trans Justice Funding
+          Project definition for what it means to be ‘trans led’, which holds
+          that the majority of the people in charge of the group identify as
+          trans or gender non-conforming. As applied to ‘LGBTQ+ led’, “in
+          charge” includes any of the following examples:
+            * The director, if there is one, should identify as a LGBTQ+.
+            * The majority of the governing board collective, advisory committee, or similar governing body, if there is such a body, should identify as LGBTQ+.
+            * The majority of any staff members should identify as LGBTQ+.
+            * If the organization or project is volunteer-run, the majority of volunteers should identify as LGBTQ+.
+      - accordionTitle: HOW ARE WE DEFINING ‘TRANS LED’?
+        accordionContent: >
+          * The organization publicly markets itself as ‘trans led;’ OR
+
+          * The organization meets the [Trans Justice Project
+          definition](https://www.transjusticefundingproject.org/) of what it
+          means to be ‘trans led’; We adhere to the Trans Justice Funding
+          Project definition, which holds that the majority of the people in
+          charge of the group identify as trans or gender non-conforming. “In
+          charge” includes any of the following examples:
+            * The director, if there is one, should identify as trans or gender non-conforming.
+            * The majority of the governing board collective, advisory committee, or similar governing body, if there is such a body, should identify as trans, or gender non-conforming.
+            * The majority of any staff members should identify as trans or gender non- conforming.
+            * If the organization or project is volunteer-run, the majority of volunteers should identify as trans or gender non-conforming.
+      - accordionTitle: HOW ARE WE DEFINING ‘WOMEN LED’?
+        accordionContent: >
+          * The organization publicly markets itself as ‘Women led’; OR
+
+          * The organization adheres to the adapted Trans Justice Funding
+          Project definition for what it means to be ‘trans led’, which holds
+          that the majority of the people in charge of the group identify as
+          trans or gender non-conforming. As applied to ‘women led’, “in charge”
+          includes any of the following examples:
+            * The director, if there is one, should identify as a woman.
+            * The majority of the governing board collective, advisory committee, or similar governing body, if there is such a body, should identify as women.
+            * The majority of any staff members should identify as women.
+            * If the organization or project is volunteer-run, the majority of volunteers should identify as women.
+    _template: accordionblock
+  - richTextContent: >
+      Definitions List #2: Determining whether an organization has a service(s)
+      ‘focused on’ a specific LGBTQ+ community
+
+
+      A service is defined as focusing on a specific LGBTQ+ community if:
+
+
+      * The service exclusively serves that community;
+
+      * The service explicitly markets itself as serving the community; OR
+
+      * The provider estimates that at least 50% of the clients served by the
+      service are members of the community
+    _template: richText
+  - content:
+      - accordionTitle: WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON ASYLUM SEEKERS?
+        accordionContent: >
+          A service is defined as focusing on asylum seekers if the service:
+
+
+          * Exclusively serves asylum seekers;
+
+          * The service explicitly markets itself as serving asylum seekers; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are asylum seekers.
+      - accordionTitle: WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON RESETTLED REFUGEES?
+        accordionContent: >
+          A service is defined as focusing on resettled refugees if the service:
+
+
+          * Exclusively serves resettled refugees;
+
+          * The service explicitly markets itself as serving resettled refugees;
+          OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are resettled refugees.
+      - accordionTitle: >-
+          WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON THE IMMIGRANT
+          COMMUNITY?
+        accordionContent: >
+          A service is defined as focusing on the immigrant community if the
+          service:
+
+
+          * Exclusively serves the immigrant community;
+
+          * The service explicitly markets itself as serving the immigrant
+          community; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are immigrants.
+      - accordionTitle: WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON SPANISH SPEAKERS?
+        accordionContent: >
+          A service is defined as focusing on Spanish speakers if the service:
+
+
+          * Exclusively serves Spanish speakers;
+
+          * The service explicitly markets itself as serving Spanish speakers;
+          OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are Spanish speakers.
+      - accordionTitle: >-
+          WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON BLACK, INDIGENOUS AND
+          PEOPLE OF COLOR (BIPOC)?
+        accordionContent: >
+          A service is defined as focusing on the BIPOC community if the
+          service:
+
+
+          * Exclusively serves the BIPOC community;
+
+          * The service explicitly markets itself as serving the BIPOC
+          community;
+
+          * The provider estimates that at least 50% of their clients served by
+          the service are BIPOC.
+      - accordionTitle: WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON LGBTQ+ YOUTH?
+        accordionContent: >
+          A service is defined as focusing on LGBTQ+ youth if the service:
+
+
+          * Exclusively serves LGBTQ+ youth;
+
+          * The service explicitly markets itself as serving LGBTQ+ youth; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are LGBTQ+ youth.
+      - accordionTitle: WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON THE HIV COMMUNITY?
+        accordionContent: >
+          A service is defined as focusing on the HIV community if the service:
+
+
+          * Exclusively serves the HIV community;
+
+          * The service explicitly markets itself as serving the HIV community;
+          OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are members of the HIV community.
+      - accordionTitle: >-
+          WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON THE TRANSGENDER
+          COMMUNITY?
+        accordionContent: >
+          A service is defined as focusing on the transgender community if the
+          service:
+
+
+          * Exclusively serves the transgender community;
+
+          * The service explicitly markets itself as serving the trans
+          community; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are transgender.
+      - accordionTitle: WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON TRANSGENDER YOUTH?
+        accordionContent: >
+          A service is defined as focusing on trans youth if the service:
+
+
+          * Exclusively serves trans youth;
+
+          * The service explicitly markets itself as serving trans youth; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are trans youth.
+      - accordionTitle: >-
+          WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON TRANSGENDER MEN AND
+          THE TRANS MASCULINE COMMUNITY?
+        accordionContent: >
+          A service is defined as focusing on transgender men and the trans
+          masculine community if the service:
+
+
+          * Exclusively serves transgender men and the trans masculine
+          community;
+
+          * The service explicitly markets itself as serving transgender men and
+          the trans masculine community; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are transgender men and trans masculine folks.
+      - accordionTitle: >-
+          WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON TRANSGENDER WOMEN AND
+          THE TRANS FEMININE COMMUNITY?
+        accordionContent: >
+          A service is defined as focusing on transgender women and the trans
+          feminine community if the service:
+
+
+          * Exclusively serves transgender women and the trans feminine
+          community;
+
+          * The service explicitly markets itself as serving transgender women
+          and the trans feminine community; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are transgender women and trans feminine folks.
+      - accordionTitle: >-
+          WHAT DOES IT MEAN FOR A SERVICE TO BE FOCUSED ON THE GENDER
+          NONCONFORMING COMMUNITY?
+        accordionContent: >
+          A service is defined as focusing on the gender nonconforming community
+          if the service:
+
+
+          * Exclusively serves the gender nonconforming community;
+
+          * The service explicitly markets itself as serving the gender
+          nonconforming community; OR
+
+          * The provider estimates that at least 50% of the clients served by
+          the service are gender nonconforming.
+    _template: accordionblock
+  - richTextContent: >
+      ***
+
+
+      # <ColoredText text="Our Re-Verification Process" color="Ally Green" />
+
+
+      We re-verify (repeat our tailored verification process described above)
+      all of the direct service providers listed on InReach at least once every
+      6 months for maximum user safety and data quality control purposes.
+
+
+      In 2023, we switched from geography-based tiers for re-verifications to
+      re-verifying organizations by time (i.e., ‘when last verified’).
+
+
+      Our trained interns carry out the bulk of our crucial re-verifications.
+
+
+      With increased capacity and support, we can continue to increase the
+      frequency of our re-verifications to ensure our resource data remains
+      up-to-date, 24/7. (Want to help? Make a [tax-deductible
+      donation](https://inreach.org/donate/) today.)
+
+
+      ***
+
+
+      # <ColoredText text="Sample Verification Features on InReach" color="Ally
+      Green" />
+
+
+      See the green “Verified Information” badge (as shown below) on a direct
+      service provider’s profile page to learn more about when the provider’s
+      information was last updated by InReach’s trained volunteers.
+
+
+      The blue “Claimed” badge (as shown below) indicates when a profile page
+      has been claimed by a verified representative of the organization.
+    position: ''
+    _template: richText
+  - richTextContent: >
+      ![](/home/Claimed-Profile-Desktop.webp)InReach claimed profile page shown
+      on desktop.
+    position: Middle
+    _template: richText
+  - blockContent: |
+      ## Additional Questions?
+
+      If you have any additional questions, please feel free to reach out to us!
+    buttonText: Contact
+    _template: imagetextbutton
+  - _template: footer
 ---
+
