--- a/content/pages/Our-Vetting-Process.mdx
+++ b/content/pages/Our-Vetting-Process.mdx
@@ -223,7 +223,7 @@ blocks:
       organization to offer a service ‘focused on’ a specific LGBTQ+ community.
 
 
-      Definitions List #1: Determining whether an organization meets any of
+      **Definitions List #1**: Determining whether an organization meets any of
       InReach’s ‘led by” definitions
 
 
@@ -316,8 +316,8 @@ blocks:
             * If the organization or project is volunteer-run, the majority of volunteers should identify as women.
     _template: accordionblock
   - richTextContent: >
-      Definitions List #2: Determining whether an organization has a service(s)
-      ‘focused on’ a specific LGBTQ+ community
+      **Definitions List #2:** Determining whether an organization has a
+      service(s) ‘focused on’ a specific LGBTQ+ community
 
 
       A service is defined as focusing on a specific LGBTQ+ community if:
@@ -547,3 +547,4 @@ blocks:
     _template: imagetextbutton
   - _template: footer
 ---
+
