changed embedded youtube video and made donate address lowercase

--- a/donate.mdx
+++ b/donate.mdx
@@ -35,8 +35,9 @@ blocks:
         # <ColoredText text="DONATE" color="White" />
       position: Left
     _template: hero
-  - richTextLeft: "<YoutubeEmbed url=\"https://www.youtube.com/watch?reload=9&v=l_sm8Q1r3d8\" />\n\nYour donation matters! Here’s the impact you can make:\n\n\U0001F49A $25 = 21 more people supported\n\U0001F49A $50 = 42 more people supported\n\U0001F49A $100 = 84 more people supported\n\U0001F49A $250 = 210 more people supported\n\U0001F49A $500 = 420 more people supported\n\U0001F49A $1,000 = 840 more people supported\n\nEvery contribution ensures #SafeHelpIsInReach for our diverse LGBTQ+ community. \U0001F308\U0001F3F3️‍⚧️\n"
+  - richTextLeft: "<YoutubeEmbed url=\"https://www.youtube.com/watch?v=l_sm8Q1r3d8\" />\n\nYour donation matters! Here’s the impact you can make:\n\n\U0001F49A $25 = 21 more people supported\n\U0001F49A $50 = 42 more people supported\n\U0001F49A $100 = 84 more people supported\n\U0001F49A $250 = 210 more people supported\n\U0001F49A $500 = 420 more people supported\n\U0001F49A $1,000 = 840 more people supported\n\nEvery contribution ensures #SafeHelpIsInReach for our diverse LGBTQ+ community. \U0001F308\U0001F3F3️‍⚧️\n"
     richTextRight: "Support InReach, a trans-led tech nonprofit revolutionizing resource access for LGBTQ+ people facing persecution or discrimination. As the world’s first open source verified LGBTQ+ resource platform, InReach ensures every trans and queer person has instant access to essential support. Your donation fuels this vital mission, improving access to safe housing, medical and mental health care, legal assistance, community support, and more for those in need. With thousands of verified services listed and new additions daily, InReach is a beacon of hope for over 400,000 people who have already benefited. Together, let’s build a world where everyone is supported and affirmed. Donate now and make a difference in the lives of LGBTQ+ people nationwide! \U0001F308✨\n\nWant to make a lasting impact? Use the online form below to schedule a monthly donation or sign up for [our annual Giving Club](https://inreach.org/join-giving-club/)! \U0001F49A\n\nFor questions about giving or website issues, please contact us [here](https://inreach.org/contact/).\nInReach is a 501(c)(3) tax-exempt organization (EIN: 81-1066673) and your gift is tax-deductible to the fullest extent allowed by law.\n\nTo donate by check: Please make checks out to “InReach” and mail to: 228 Park Ave S, Suite # 90945, New York, NY 10003-1502.\n\n<ActionButton text=\"Donate\" link=\"/\" />\n"
     _template: twoColumn
   - _template: footer
 ---
+
