renamed pages and fixed embedded youtube video

--- a/content/pages/FAQs.mdx
+++ b/content/pages/FAQs.mdx
@@ -47,8 +47,9 @@ blocks:
         flag: ES
     _template: header
   - heroBackgroundImage:
-      src: /FAQ/FAQs cover.jpg
+      src: /FAQ/FAQscover.jpg
       alt: FAQs Cover Image
+      colorFilter: '#C9C9C9'
     heroHeaderText:
       text: |
         Frequently Asked Questions
@@ -145,7 +146,7 @@ blocks:
 
           “Crisis resources” (e.g., emergency housing, food, legal help, mental
           health hotlines, medical care, drop-in centers for LGBTQ+ youth,
-          abortion care, and more) 
+          abortion care, and more)
 
 
           * “Quality of life resources” (resources that LGBTQ+ people need to
@@ -160,12 +161,12 @@ blocks:
         accordionContent: >
           Every direct service provider listed on InReach is vetted by our
           trained volunteers to be welcoming to LGBTQ+ people facing persecution
-          or discrimination. 
+          or discrimination.
 
 
           Our trained volunteers employ a rigorous tailored vetting process for
           all direct service providers listed on InReach. Our core vetting
-          criteria include: 
+          criteria include:
 
 
           * Is the direct service provider active and legitimate? (required to
@@ -192,7 +193,7 @@ blocks:
 
           * See [our intersectionality
           definitions](https://inreach.org/vetting-process/) for more
-          information. 
+          information.
 
 
           We repeat our vetting process for every provider listed on InReach at
@@ -235,7 +236,7 @@ blocks:
           Sign-up for a free InReach user account to:
 
 
-          * Easily save your personal resource searches for future use 
+          * Easily save your personal resource searches for future use
 
           * Access your saved resource lists from different devices (such as
           different public computers)
@@ -250,21 +251,21 @@ blocks:
         accordionContent: >
           To rate and review a resource, you must first create a free user
           account. Please see “HOW DO I SIGN UP FOR A USER ACCOUNT?” above for
-          instructions. 
+          instructions.
 
 
           Once you are logged in, you will be able to leave a public rating (one
           to five stars) and written review on any direct service provider you
-          find listed on InReach. 
+          find listed on InReach.
 
 
           * Click on any direct service provider you see listed in the App to go
-          to the organization’s profile page 
+          to the organization’s profile page
 
           * Click on the “Reviews” tab on the provider’s profile page to be
-          taken to the the “Leave a review” section 
+          taken to the the “Leave a review” section
 
-          * Click on the stars (one to five stars) to leave a rating 
+          * Click on the stars (one to five stars) to leave a rating
 
           * Type your review in the text box to leave more feedback on your
           experience
@@ -289,7 +290,7 @@ blocks:
           VERIFIED RESOURCES?
         accordionContent: >
           To share feedback with our team, please fill out our quick [InReach
-          App Share Feedback Survey](https://www.surveymonkey.com/r/96QD8ZQ). 
+          App Share Feedback Survey](https://www.surveymonkey.com/r/96QD8ZQ).
 
 
           We’d love to hear from you!
@@ -368,7 +369,7 @@ blocks:
           I IDENTIFY AS PART OF THE LGBTQ+ COMMUNITY AND I AM PLANNING TO
           RESETTLE IN A NEW COUNTRY. CAN I USE YOUR WEBSITE AND APP TO HELP ME
           PLAN MY JOURNEY TO SAFETY?
-        accordionContent: >+
+        accordionContent: >
           Yes, if you are planning to seek asylum, resettle in or travel through
           the United States, Canada or Mexico you can use the free InReach App
           to help you plan ahead. You can visit our [free
@@ -376,8 +377,6 @@ blocks:
           legal, medical, mental health and other social services. You can also
           sign up for a free InReach user account to easily share and save their
           personalized resource lists for later.
-
-
       - accordionTitle: >-
           I DO NOT IDENTIFY AS PART OF THE LGBTQ+ COMMUNITY. ARE THERE OTHER
           ORGANIZATIONS THAT CAN HELP ME?
@@ -400,7 +399,7 @@ blocks:
           HELP ME?
         accordionContent: >
           Unfortunately, InReach cannot provide direct travel support or help
-          obtaining travel visas. 
+          obtaining travel visas.
 
 
           We recommend reaching out to [Rainbow
@@ -423,7 +422,7 @@ blocks:
           platform for LGBTQ+ asylum seekers, to fill the critical resource
           information gap facing the diverse LGBTQ+ community. The organization
           is founded on the belief that every LGBTQ+ person deserves the safety
-          and freedom to live authentically. 
+          and freedom to live authentically.
 
 
           In May 2022, AsylumConnect officially became InReach. Since launching
@@ -460,7 +459,7 @@ blocks:
           ASYLUM SEEKERS ?
         accordionContent: >
           No. We are very proud of our history and we intend to remain the go-to
-          platform for LGBTQ+ people seeking asylum. 
+          platform for LGBTQ+ people seeking asylum.
 
 
           We began by validating our free technology model and user need with
@@ -473,7 +472,7 @@ blocks:
           agency [B-Reel](https://www.b-reel.com/) on choosing our
           organization’s new name and logo. Our goal was to choose a new name
           that more effectively communicates who our free technology is able to
-          help, while continuing to honor our organization’s history. 
+          help, while continuing to honor our organization’s history.
 
 
           Our new name (“InReach”) strives to invoke a sense of hope and
@@ -483,7 +482,7 @@ blocks:
         accordionContent: >
           We are based in the United States. Our team is remote, with board
           members, advisors, staff, volunteers, and interns located across the
-          country. We do not accept in-person appointments. 
+          country. We do not accept in-person appointments.
 
 
           You can access [the free InReach App](https://app.inreach.org/) 24/7
@@ -492,3 +491,4 @@ blocks:
     _template: accordionblock
   - _template: footer
 ---
+
