edited photo and did nothing else

--- a/content/pages/FAQs.mdx
+++ b/content/pages/FAQs.mdx
@@ -37,7 +37,8 @@ blocks:
         ======
       position: Middle
     _template: hero
-  - richTextLeft: >
+  - verticalAlignment: top
+    richTextLeft: >
       #### Here are some common questions about our organization, volunteering,
       donations and fundraising, and how to use the world’s [first tech
       p<ColoredText color="White" />latform](https://app.inreach.org) matching
@@ -48,7 +49,7 @@ blocks:
       #### &#x20;If you have additional questions, please feel free to reach out
       to us via our [contact page](https://inreach.org/contact/) or email us.
     richTextRight: |
-      ![](</FAQ/FAQs page.jpg>)
+      ![](/FAQ/FAQspage.jpg)
     _template: twoColumn
   - blockTitle: Getting Help
     content:
