Edited some of the mdx to include footers and headers

--- a/content/pages/in-the-news.mdx
+++ b/content/pages/in-the-news.mdx
@@ -1,6 +1,13 @@
 ---
 title: In The News
 blocks:
+  - logo:
+      src: /inreach-logos/InReach_Logo_Color_RGB.svg
+      alt: InReach logo
+    navBGColor: Green
+    navLinks:
+      - {}
+    _template: header
   - heroBackgroundImage:
       src: /images/in-the-news-cover.png
       alt: cover
@@ -606,6 +613,8 @@ blocks:
 
       Get instantly matched with safe, verified legal, medical, mental health,
       and social services.
+    richTextRight: ''
     _template: twoColumn
+  - _template: footer
 ---
 
