--- a/content/pages/our-vetting-process.mdx
+++ b/content/pages/our-vetting-process.mdx
@@ -1,6 +1,13 @@
 ---
 title: Our Vetting Process
 blocks:
+  - logo:
+      src: /inreach-logos/InReach_Logo_Color_RGB.svg
+      alt: InReach logo
+    navBGColor: Green
+    navLinks:
+      - {}
+    _template: header
   - heroBackgroundImage:
       src: /images/img10.png
       alt: banner
@@ -9,15 +16,15 @@ blocks:
         # <ColoredText text="Our Vetting Process" color="White" />
       position: Left
     _template: hero
-  - richTextLeft: >
-      #### Every direct service provider listed on InReach is independently
-      vetted by our trained volunteers to be a welcoming space for LGBTQ+ people
-      facing persecution or discrimination.
+  - richTextContent: >
+      ## <ColoredText text="Every" color="Ally Green" /> direct service provider
+      listed on InReach is independently vetted by our trained volunteers to be
+      a welcoming space for LGBTQ+ people facing persecution or discrimination.
 
 
       ![](/home/Service-Provider-Page-1024x725.webp)
-    richTextRight: ''
-    _template: twoColumn
+    position: Middle
+    _template: richText
   - richTextContent: |
       <ColoredText text="Our Vetting Process (updated: 2024)" color="Green" />
     _template: richText
@@ -81,7 +88,7 @@ blocks:
         accordionContent: >
           * Our trained volunteers deploy a multi-tiered vetting process to
           assess whether or not a service provider is generally ‘LGBTQ+
-          affirming’. 
+          affirming’.
 
           * Step #1: Is the organization’s mission to serve the LGBTQ+ community
           (e.g., an LGBTQ+ center)?
@@ -111,44 +118,46 @@ blocks:
           As a result, in addition to satisfying our general LGBTQ+ affirming
           verification criteria, we look for (prefer but do not require to be
           listed on InReach) organizations who are ‘led by’ and/or have services
-          ‘focused on’ serving historically marginalized LGBTQ+ communities. 
+          ‘focused on’ serving historically marginalized LGBTQ+ communities.
 
 
           For example, we look for organizations who are led by those with
           relevant lived experience for LGBTQ+ people facing discrimination and
-          persecution, such as organizations who are: 
+          persecution, such as organizations who are:
 
 
-          * Black, Indigenous and People of Color (BIPOC) led 
+          * Black, Indigenous and People of Color (BIPOC) led
 
-          * Black led 
+          * Black led
 
-          * Immigrant led 
+          * Immigrant led
 
-          * Trans led 
+          * Trans led
 
-          * \*Note: We hope to add new ‘led by’ categories in the future. 
+          * \*Note: We hope to add new ‘led by’ categories in the future.
 
 
           We also look for organizations who provide services that are focused
-          on serving a specific marginalized LGBTQ+ population(s), including: 
+          on serving a specific marginalized LGBTQ+ population(s), including:
 
 
-          * Black, Indigenous and People of Color (BIPOC) community 
+          * Black, Indigenous and People of Color (BIPOC) community
 
-          * Immigrant community 
+          * Immigrant community
             * Asylum seekers
-            * Resettled refugees 
-          * LGBTQ+ youth 
-            * Trans youth 
-          * Spanish speakers 
+            * Resettled refugees
+          * LGBTQ+ youth
+            * Trans youth
+          * Spanish speakers
 
-          * Trans community 
+          * Trans community
             * Gender nonconforming community
-            * Trans men and the transmasculine community 
+            * Trans men and the transmasculine community
             * Trans women and the transfeminine community
-            * Trans youth 
+            * Trans youth
           * \*Note: As our organization’s capacity grows, we hope to add new
           LGBTQ+ communities in the future.
     _template: accordionblock
+  - _template: footer
 ---
+
